k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itunes-app-storefront
  namespace: itunes-app-store
  labels:
    app: itunes-app-storefront
spec:
  replicas: 1
  selector:
    matchLabels:
      app: itunes-app-storefront
  template:
    metadata:
      labels:
        app: itunes-app-storefront
    spec:
      containers:
      - name: itunes-app-storefront
        image: localhost:5000/itunes-app-storefront
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: itunes-app-storefront-service
  namespace: itunes-app-store
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: itunes-app-storefront
